Update machine name in upload tasks
Signed-off-by: Ali Polatel <alip@exherbo.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -47,7 +47,7 @@ upload:
 
 .PHONY: upload-release
 upload-release: upload $(SHA1_FILE) $(GPG_FILE)
-	rsync --partial --progress -ave ssh $(TAR_FILE) $(SHA1_FILE) $(GPG_FILE) tchaikovsky.exherbo.org:public_html/sydbox/
+	rsync --partial --progress -ave ssh $(TAR_FILE) $(SHA1_FILE) $(GPG_FILE) strauss.exherbo.org:public_html/sydbox/
 
 .PHONY: jenkins
 jenkins:
