--- a/t/test-bin/Makefile.am
+++ b/t/test-bin/Makefile.am
@@ -24,8 +24,16 @@ realpath_mode_1_SOURCES= realpath_mode-1.c \
 			 ../../src/file.c \
 			 ../../src/util.c
 
+sockmatchtest_SOURCES= sockmatchtest.c \
+		       $(top_srcdir)/src/path.c \
+		       $(top_srcdir)/src/pathmatch.c \
+		       $(top_srcdir)/src/sockmatch.c \
+		       $(top_srcdir)/src/util.c \
+		       $(top_srcdir)/src/wildmatch.c \
+		       $(top_srcdir)/src/xfunc.c
+
 syddir=$(libexecdir)/$(PACKAGE)/t/test-bin
-syd_PROGRAMS= wildtest realpath_mode-1 \
+syd_PROGRAMS= wildtest realpath_mode-1 sockmatchtest \
 	      syd-true syd-true-static syd-true-fork syd-true-fork-static syd-true-pthread \
 	      syd-false syd-false-static syd-false-fork syd-false-fork-static syd-false-pthread \
 	      syd-abort syd-abort-static syd-abort-fork syd-abort-fork-static \
