--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,7 @@ tests/t[0-9][0-9][0-9]*
 /t/test-bin/*-[0-9]
 /t/test-bin/syd-*
 !/t/test-bin/syd-*.[ch]
+/t/test-bin/sockmatchtest
 /t/test-bin/wildtest
 /t/valgrind/bin/*
 
