tests: handle missing newfstatat gracefully
Signed-off-by: Ali Polatel <alip@exherbo.org>

--- a/configure.ac
+++ b/configure.ac
@@ -206,6 +206,14 @@ AC_CHECK_TYPES([sig_atomic_t], [], AC_MSG_ERROR([I need sigatomic_t]), [#include
 AC_CHECK_TYPES([sighandler_t, sig_t, __sighandler_t],,,[#include <signal.h>])
 AC_CHECK_TYPES([struct open_how],,,[#include <linux/openat2.h>])
 
+HAVE_NEWFSTATAT=
+AC_CHECK_DECL([SYS_newfstatat],
+	      [HAVE_NEWFSTATAT=1],
+	      [HAVE_NEWFSTATAT=0],
+	      [#include <sys/syscall.h>])
+AC_DEFINE_UNQUOTED([HAVE_NEWFSTATAT], [$HAVE_NEWFSTATAT], ['Have newfstatat() system call'])
+AC_SUBST([HAVE_NEWFSTATAT])
+
 save_CPPFLAGS=$CPPFLAGS
 CPPFLAGS="-I$srcdir/t $CPPFLAGS"
 AC_CHECK_TYPES([struct user_regs_struct, struct pt_regs],,,[#include "headers.h"])
