shoebox: support whitelisting bind requests
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/shoebox.in
+++ b/src/shoebox.in
@@ -483,6 +483,8 @@ def command_magic(args):
                     magic.add(rule)
 #            elif sys_call[0] in ('stat',):
 
+            elif sys_call[0] == 'bind' and 'NETLINK' not in sys_call[2]:
+                magic.add('whitelist/network/bind+%s' % sys_call[2])
             elif sys_call[0] == 'connect':
                 magic.add('whitelist/network/connect+%s' % sys_call[2])
             else:
