--- a/src/shoebox.in
+++ b/src/shoebox.in
@@ -488,7 +488,7 @@ def command_magic(args):
                     magic.add(rule)
 #            elif sys_call[0] in ('stat',):
 
-            elif sys_call[0].startswith('execve'):
+            elif sys_call[0] == 'execve':
                 magic.add('#! whitelist/exec+%s' % sys_call[1])
             elif sys_call[0] == 'bind' and 'NETLINK' not in sys_call[2]:
                 magic.add('whitelist/network/bind+%s' % sys_call[2])
