--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ name = "pandora"
 path = "src/pandora.rs"
 
 [dependencies]
+libc = "0.2"
+nix = "0.20"
 clap = "2.33"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
