pandora: tweak cargo settings
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,18 @@
 [package]
 name = "pandora"
-default-run = "pandora"
 version = "0.1.0"
 authors = ["Alï Polatel <alip@exherbo.org>"]
 edition = "2018"
-license = "GPL-3.0-or-later"
-homepage = "https://dev.exherbo.org/~alip/sydbox/sydbox.html"
-repository = "https://git.exherbo.org/sydbox-1.git/"
+description = "Pandora's Box: A helper for SydBox, a ptrace & seccomp based sandbox to make sandboxing practical"
+documentation = "https://dev.exherbo.org/~alip/sydbox/sydbox.html"
 readme = "README"
+homepage = "https://git.exherbo.org/sydbox-1.git/"
+repository = "https://git.exherbo.org/sydbox-1.git/"
+license = "GPL-3.0-or-later"
 keywords = ["security", "sandbox", "seccomp", "sydbox", "pinktrace"]
 categories = ["command-line-utilities", "config", "development-tools", "development-tools::debugging", "os::linux-apis"]
+build = "build.rs"
+default-run = "pandora"
 
 [[bin]]
 name = "pandora"
