pandora: more metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "Pandora's Box: A helper for SydBox, a ptrace & seccomp based sandbox to make sandboxing practical"
 documentation = "https://dev.exherbo.org/~alip/sydbox/sydbox.html"
 readme = "README"
-homepage = "https://git.exherbo.org/sydbox-1.git/"
+homepage = "https://dev.exherbo.org/~alip/sydbox/sydbox.html"
 repository = "https://git.exherbo.org/sydbox-1.git/"
 license = "GPL-3.0-or-later"
 keywords = ["security", "sandbox", "seccomp", "sydbox", "pinktrace"]
