start testing read sandboxing and seccomp
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/t/test-bin/Makefile.am
+++ b/t/test-bin/Makefile.am
@@ -37,6 +37,6 @@ syd_PROGRAMS= wildtest realpath_mode-1 sockmatchtest \
 	      syd-true syd-true-static syd-true-fork syd-true-fork-static syd-true-pthread \
 	      syd-false syd-false-static syd-false-fork syd-false-fork-static syd-false-pthread \
 	      syd-abort syd-abort-static syd-abort-fork syd-abort-fork-static \
-	      syd-abort-pthread syd-abort-pthread-static syd-fstatat syd-mkdir-p
+	      syd-abort-pthread syd-abort-pthread-static syd-fstatat syd-mkdir-p syd-open-static
 
 check_PROGRAMS= $(syd_PROGRAMS)
