add LICENSE, COPYING to extra dist
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,8 @@ MAINTAINERCLEANFILES= \
 		      aclocal.m4 \
 		      config.h \
 		      config.h.in \
+		      COPYING \
+		      LICENSE \
 		      INSTALL
 
 EXTRA_DIST= \
